--- a/MY_Second_Project/MY_Second_Project/Base.lproj/Main.storyboard
+++ b/MY_Second_Project/MY_Second_Project/Base.lproj/Main.storyboard
@@ -101,7 +101,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1943" y="-808"/>
+            <point key="canvasLocation" x="1943" y="-78"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="D2e-dH-Yud">
@@ -115,9 +115,9 @@
                                 <rect key="frame" x="20" y="160" width="388" height="263"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nnk-SA-Tcm">
-                                        <rect key="frame" x="0.0" y="0.0" width="90" height="20.333333333333332"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="130" height="20.333333333333332"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="90" id="JAo-PF-oed"/>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="130" id="S6r-rx-PLd"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
@@ -196,7 +196,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="B72-EU-h6R" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3095" y="-809"/>
+            <point key="canvasLocation" x="2914" y="-78"/>
         </scene>
         <!--Categories View Controller-->
         <scene sceneID="Ufi-9p-YCz">
@@ -726,7 +726,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2kc-am-492" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="876" y="-808"/>
+            <point key="canvasLocation" x="878" y="-78"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
